[Add] Todolist table draft

--- a/index.html
+++ b/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="index.css">
   <title>habv todo</title>
 </head>
+
 <body>
-  
+  <div class="container" id="first" >
+    <div class="no">#</div>
+    <div class="task-name">Task name</div>
+    <div class="status">Status</div>
+    <div class="edit">Edit</div>
+    <div class="remove">Remove</div>
+  </div>
+  <div class="container hb">
+    <div class="no">24</div>
+    <div class="task-name">Buy Grocery</div>
+    <div class="status1">Todo</div>
+    <div class="edit1">&#128396;</div>
+    <div class="remove1">&#128722;</i></div>
+  </div>
+  <div class="container hb">
+    <div class="no">25</div>
+    <div class="task-name">Send Email</div>
+    <div class="status2">In Progress</div>
+    <div class="edit1">&#128396;</div>
+    <div class="remove1">&#128722;</i></div>
+  </div>
+  <div class="container hb">
+    <div class="no">28</div>
+    <div class="task-name">Finish Assignment</div>
+    <div class="status3">Complete</div>
+    <div class="edit1">&#128396;</div>
+    <div class="remove1">&#128722;</i></div>
+  </div>
+  <div class="container hb">
+    <div class="no">30</div>
+    <div class="task-name">Bake Cake</div>
+    <div class="status1">Todo</div>
+    <div class="edit1">&#128396;</div>
+    <div class="remove1">&#128722;</i></div>
+  </div>
+  <div class="container hb">
+    <div class="no">31</div>
+    <div class="task-name">Write Blog Post</div>
+    <div class="status4">In Progress</div>
+    <div class="edit1">&#128396;</div>
+    <div class="remove1">&#128722;</i></div>
+  </div>
 </body>
+
 </html>
