--- a/form-signup.html
+++ b/form-signup.html
@@ -65,7 +65,7 @@
 
                 <div class="title">
                     Already have an account? 
-                    <a href="https://www.facebook.com/taminluv.vi">Sign in</a>
+                    <a href="https://www.facebook.com/taminluv.vi" class="asignin">Sign in</a>
                 </div>
             </form>
         </div>
