[update] form-signup

--- a/form-signup.html
+++ b/form-signup.html
@@ -11,7 +11,8 @@
 <body>
     <div class="container">
         <div class="imgsignup-container">
-            <img src="https://upload.wikimedia.org/wikipedia/vi/9/90/One_Piece%2C_Volume_61_Cover_%28Japanese%29.jpg" alt="imgsingup" id="imgsignup">
+             <!-- Sử dụng onerror="this.src=''" để thay ảnh khi bị lỗi -->
+            <img onerror="this.src='/img/img_error.png'" src="https://upload.wikimedia.org/wikipedia/vi/9/90/One_Piece%2C_Volume_61_Cover_%28Japanese%29.jpg" alt="imgsingup" id="imgsignup">
         </div>
         <div class="formsingup">
             <form>
